[project]
name = "packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AbdulHadiSSE", email = "abdul.hadi44524@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.2.11",
]

[project.scripts]
run_agent = "packaged_app.main:greeting_agent"
packaged-app = "packaged_app:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
